# langcodec

./: .gitignore
langcodec/: Cargo.toml
langcodec-cli/: Cargo.toml
langcodec-cli/src/: main.rs
langcodec-cli/src/editor/: app.rs  handler.rs  mod.rs  ui.rs
