[package]
name = "langcodec-cli"
version = "0.12.0"
edition = "2024"
description = "A universal CLI tool for converting and inspecting localization files (Apple, Android, CSV, etc.)"
license = "MIT"
repository = "https://github.com/oops-rs/langcodec"
homepage = "https://github.com/oops-rs/langcodec"
readme = "README.md"
keywords = ["localization", "i18n", "cli", "android", "apple"]
categories = ["command-line-utilities", "internationalization", "localization"]
documentation = "https://docs.rs/langcodec-cli"

[dependencies]
langcodec = { path = "../langcodec", version = "0.12.0" }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
unicode-width = "0.2.0"
crossterm = "0.29.0"
ratatui = "0.29"
atty = "0.2.14"
async-trait = "0.1.89"
mentra = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "sync"] }
toml = "0.8"
unic-langid = "0.9.6"
glob = "0.3"
rayon = "1.10"
ignore = "0.4"
globset = "0.4"

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.8"

[[bin]]
name = "langcodec"
path = "src/main.rs"
