[package]
name = "langcodec"
version = "0.12.0"
edition = "2024"
description = "Universal localization file toolkit for Rust. Supports Apple, Android, and CSV formats."
license = "MIT"
repository = "https://github.com/oops-rs/langcodec"
homepage = "https://github.com/oops-rs/langcodec"
documentation = "https://docs.rs/langcodec"
readme = "README.md"
keywords = ["localization", "i18n", "l10n", "android", "apple"]
categories = ["internationalization", "localization", "encoding"]

[lib]
path = "src/lib.rs"

[dependencies]
csv = "1.3"
indoc = "2.0.6"
lazy_static = "1.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
quick-xml = "0.37.5"
regex = "1.11.1"
unic-langid = "0.9.6"
encoding_rs = "0.8"
encoding_rs_io = "0.1"

[dev-dependencies]
proptest = "1.6"
tempfile = "3.8"
